opam-version: "1"
package "ANSITerminal" {
  version: "0.6"
  maintainer: "<none>"
  substs: []
  build: [["ocaml" "setup.ml" "-configure" "--prefix" "%{lib}%"] ["ocaml" "setup.ml" "-build"] ["ocaml" "setup.ml" "-install"]]
  depends: ["findlib"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}