opam-version: "1"
package "OCaml" {
  version: "3.12.1"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["mkdir" "-p" "%{lib}%/OCaml"] ["cp" "-R" "asmcomp" "asmrun" "boot" "build" "bytecomp" "byterun" "camlp4" "Changes" "config" "configure" ".cvsignore" "debugger" ".depend" "driver" "emacs" "INSTALL" "lex" "LICENSE" "Makefile" "Makefile.nt" "man" "myocamlbuild_config.mli" "myocamlbuild.ml" "ocamlbuild" "ocamldoc" "otherlibs" "parsing" "README" "README.win32" "stdlib" "_tags" "testlabl" "testsuite" "tools" "toplevel" "typing" "Upgrading" "utils" "VERSION" "win32caml" "yacc" "%{lib}%/OCaml"]]
  remove: []
  depends: []
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}