opam-version: "1"
package "annexlib" {
  version: "0.13.5"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["./configure" "--prefix" "%{prefix}%"] ["make"] ["make" "install"]]
  remove: [["ocamlfind" "remove" "annexlib"]]
  depends: ["pcre-ocaml" "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}