opam-version: "1"
package "archimedes" {
  version: "0.4.13"
  maintainer: "<none>"
  substs: []
  build: [["ocaml" "setup.ml" "-configure" "--prefix" "%{lib}%"] ["ocaml" "setup.ml" "-build"] ["ocaml" "setup.ml" "-install"]]
  depends: ["cairo" "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}