opam-version: "1"
package "archimedes" {
  version: "0.4.13"
  maintainer: "<none>"
  substs: []
  build: [["ocaml" "setup.ml" "-configure" "--prefix" "%{prefix}%"] ["ocaml" "setup.ml" "-build"] ["ocaml" "setup.ml" "-install"]]
  depends: ["cairo" {= "0.4.1"} "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}