opam-version: "1"
package "camlzip" {
  version: "1.04"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["make" "all"] ["make" "allopt"] ["make" "install" "INSTALLDIR=%{lib}%/camlzip"] ["make" "installopt" "INSTALLDIR=%{lib}%/camlzip"]]
  remove: []
  depends: []
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}