opam-version: "1"
package "csv" {
  version: "1.2.2"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["oasis" "setup"] ["ocaml" "setup.ml" "-configure" "--prefix" "%{prefix}%"] ["ocaml" "setup.ml" "-build"] ["ocaml" "setup.ml" "-install"]]
  remove: [["ocamlfind" "remove" "csv"]]
  depends: ["oasis" {= "0.3.0"} "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}