opam-version: "1"
package "eliom" {
  version: "2.2.2+ocamlduce"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["sh" "configure" "--prefix" "%{prefix}%" "--mandir" "%{lib}%/eliom/share/man" "--docdir" "%{lib}%/eliom/share/doc/eliom"] ["make"] ["make" "install"]]
  remove: [["rm" "-rf" "%{lib}%/ocamlfind/eliom"]]
  depends: ["ocamlduce" "ocsigenserver" "calendar" "js_of_ocaml" "deriving-ocsigen" "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}