opam-version: "1"
package "extlib" {
  version: "1.5.2"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["make" "all"] ["make" "opt"] ["ocamlopt" "-shared" "-linkall" "extLib.cmxa" "-o" "extLib.cmxs"] ["ocaml" "str.cma" "unix.cma" "opam.ml" "sed" "_add_expr_" "23" "META" "META extLib.cmxs" "Makefile"] ["make" "install"]]
  remove: [["ocamlfind" "remove" "extlib"]]
  depends: ["ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}