opam-version: "1"
package "extlib" {
  version: "opam"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["ocaml" "str.cma" "unix.cma" "opam.ml" "sed" "_add_expr_" "38" "ExtHashtbl." "" "extLib.ml"] ["ocp-build" "-init" "-scan"]]
  remove: []
  depends: ["ocp-build"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}