opam-version: "1"
package "fileutils" {
  version: "0.4.1"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["./configure"] ["make"] ["make" "install"]]
  remove: [["ocamlfind" "remove" "fileutils"]]
  depends: ["ounit" "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}