opam-version: "1"
package "lacaml" {
  version: "7.0.0"
  maintainer: "<none>"
  substs: []
  build: [["ocaml" "setup.ml" "-configure" "--prefix" "%{lib}%"] ["ocaml" "setup.ml" "-build"] ["ocaml" "setup.ml" "-install"]]
  depends: ["findlib"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}