opam-version: "1"
package "lwt" {
  version: "2.3.2+all"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["./configure" "--prefix" "%{prefix}%" "--enable-all"] ["ocaml" "str.cma" "opam.ml" "sed" "_add_expr_" "681" "in" "in let compiler_libs = [\"%{lib}%/compiler-libs\"] in" "myocamlbuild.ml"] ["make"] ["make" "install"]]
  remove: [["ocamlfind" "remove" "lwt"]]
  depends: ["compiler-libs" "ocaml-text" "ocaml-ssl" "react" "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}