opam-version: "1"
package "oasis" {
  version: "0.3.0"
  maintainer: "<none>"
  substs: []
  build: [["ocaml" "setup.ml" "-configure" "--prefix" "%{prefix}%"] ["ocaml" "setup.ml" "-build"] ["ocaml" "setup.ml" "-install"]]
  remove: [["ocamlfind" "remove" "plugin-loader"] ["ocamlfind" "remove" "userconf"] ["ocamlfind" "remove" "oasis"]]
  depends: ["ocamlmod" "ocamlify" "ocaml-data-notation" "fileutils" "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}