opam-version: "1"
package "ocaml-bitstring" {
  version: "2.0.3"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["./configure" "--prefix" "%{prefix}%"] ["make"] ["make" "install"]]
  remove: [["ocamlfind" "remove" "bitstring"]]
  depends: ["ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}