opam-version: "1"
package "ocaml-sqlexpr" {
  version: "0.3.0"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["make"] ["make" "install"]]
  remove: [["ocamlfind" "remove" "sqlexpr"]]
  depends: ["sqlite3-ocaml" "lwt" "batteries" "csv" "extlib" {= "1.5.2"} "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}