opam-version: "1"

package "ocamlfind" {
  version:    "1.3.1"
  maintainer: "contact@ocamlpro.com"
  build:      [
    [ "./configure"
        "-bindir"  "%{bin}%"
        "-sitelib" "%{lib}%/ocamlfind"
        "-mandir"  "%{lib}%/ocamlfind/doc"
        "-config"  "%{lib}%/ocamlfind/findlib.conf"
        "-no-topfind" ]
    [ "make" "all"]
    [ "make" "opt" ]
    [ "make" "install" ]
  ]
}