opam-version: "1"
package "ocamlfind" {
  version: "1.3.1"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["./configure" "-bindir" "%{bin}%" "-sitelib" "%{lib}%/ocamlfind" "-mandir" "%{doc}%/ocamlfind" "-config" "%{lib}%/ocamlfind/findlib.conf"] ["make" "all"] ["make" "opt"] ["make" "install"]]
  remove: []
  depends: []
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}