opam-version: "1"

package "ocamlfind" {
  version:    "1.3.2"
  ocaml-version: [ > "3.12.2" ]
  maintainer: "contact@ocamlpro.com"
  build:      [
    [ "./configure"
        "-bindir"  "%{bin}%"
        "-sitelib" "%{lib}%/ocamlfind"
        "-mandir"  "%{doc}%/ocamlfind"
        "-config"  "%{lib}%/ocamlfind/findlib.conf"
        "-no-topfind" ]
    [ "make" "all"]
    [ "make" "opt" ]
    [ "make" "install" ]
  ]
}
