opam-version: "1"

package "ocamlgraph" {
  version:    "1.8.1"
  maintainer: "contact@ocamlpro.com"
  build:  [
    [ "./configure" "--prefix=%{prefix}%" "--exec-prefix=%{prefix}%" ]
    [ "make" ]
    [ "make" "install-findlib" ]
  ]
  remove: [ "ocamlfind" "remove" "ocamlgraph" ]
  depends: [ "ocamlfind" ]
}