opam-version: "1"
package "ocamlnet" {
  version: "3.5.1+all"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["./configure" "-bindir" "%{bin}%" "-enable-gtk2" "-enable-ssl" "-enable-crypto" "-with-nethttpd"] ["make" "all"] ["make" "opt"] ["make" "install"]]
  remove: [["ocamlfind" "remove" "equeue"] ["ocamlfind" "remove" "equeue-gtk2"] ["ocamlfind" "remove" "equeue-ssl"] ["ocamlfind" "remove" "netcamlbox"] ["ocamlfind" "remove" "netcgi2"] ["ocamlfind" "remove" "netcgi2-plex"] ["ocamlfind" "remove" "netclient"] ["ocamlfind" "remove" "netgssapi"] ["ocamlfind" "remove" "nethttpd"] ["ocamlfind" "remove" "nethttpd-for-netcgi2"] ["ocamlfind" "remove" "netmech-scram"] ["ocamlfind" "remove" "netmulticore"] ["ocamlfind" "remove" "netplex"] ["ocamlfind" "remove" "netshm"] ["ocamlfind" "remove" "netstring"] ["ocamlfind" "remove" "netsys"] ["ocamlfind" "remove" "pop"] ["ocamlfind" "remove" "rpc"] ["ocamlfind" "remove" "rpc-auth-local"] ["ocamlfind" "remove" "rpc-generator"] ["ocamlfind" "remove" "rpc-ssl"] ["ocamlfind" "remove" "shell"] ["ocamlfind" "remove" "smtp"]]
  depends: ["cryptokit" "camlzip" "ssl" "pcre-ocaml" "lablgtk" {= "2.14.2-oasis8"} "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}