opam-version: "1"
package "oclosure" {
  version: "0"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["make"] ["make" "install" "BINDIR=%{bin}%"]]
  remove: [["ocamlfind" "remove" "oclosure"]]
  depends: ["js_of_ocaml" "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}