opam-version: "1"
package "opam" {
  version: "opam"
  maintainer: "<none>"
  substs: ["depends.ocp"]
  build-env: []
  build: [["ocp-build" "-init" "-scan"]]
  remove: []
  depends: ["ocp-build" "dose" {= "2.9.15"} "ocamlgraph" {= "opam"} "cudf" {= "0.6.2"} "extlib" {= "opam"} "re" {= "0.9dev"} "ocaml-arg" {= "0.1"}]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}