opam-version: "1"
package "optimization1d" {
  version: "0.5"
  maintainer: "<none>"
  substs: []
  build: [["ocaml" "setup.ml" "-configure" "--prefix" "%{prefix}%"] ["ocaml" "setup.ml" "-build"] ["ocaml" "setup.ml" "-install"]]
  depends: ["ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}