opam-version: "1"
package "pgocaml" {
  version: "1.6"
  maintainer: "<none>"
  substs: []
  build-env: []
  build: [["make" ".depend"] ["make"] ["ocamlopt" "-shared" "-linkall" "pgocaml.cmxa" "-o" "pgocaml.cmxs"] ["ocaml" "str.cma" "unix.cma" "opam.ml" "sed" "_add_expr_" "169" "META" "META pgocaml.cmxs" "Makefile"] ["make" "findlib_install"]]
  remove: [["ocamlfind" "remove" "pgocaml"]]
  depends: ["csv" "calendar" "pcre-ocaml" "extlib" {= "1.5.2"} "ocamlfind"]
  depopts: []
  conflicts: []
  libraries: []
  syntax: []
}